# voxgl-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/voxgl/: mod.rs  render.rs  state.rs  texture.rs  textures.rs  window.rs
src/voxgl/camera/: camera.rs  camera_controller.rs  mod.rs  player_camera.rs  projection.rs
src/voxgl/rendering/: arena.rs  mod.rs  pipeline.rs  resources.rs  utils.rs  vertex.rs  voxel.wgsl
src/voxgl/world/: chunk.rs  chunks.rs  color.rs  mesh_builder.rs  mod.rs  quad.rs  terrain.rs  voxel.rs
src/voxgl/world/rendering/: mod.rs  voxel.wgsl
