[package]
name = "voxgl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bracket-noise = "0.8.7"
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.0"
generational-arena = "0.2.9"
instant = "0.1.12"
lazy_static = "1.4.0"
lifeguard = "0.6.1"
log = "0.4.19"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.17.0"
winit = "0.28.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies 
[profile.dev.package."*"]
opt-level = 3